# kaken-mcp

./: .gitignore  LICENSE  README.md  SPECIFICATION.md  pyproject.toml
.serena/: project.yml
kaken_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
kaken_mcp/tools/: __init__.py  projects.py  researchers.py
tests/: __init__.py  test_client.py
