[project]
name = "kaken-mcp"
version = "0.1.0"
description = "MCP server for KAKEN (Grants-in-Aid for Scientific Research) database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "leaveanest" }]
keywords = ["mcp", "kaken", "research", "grants", "scientific-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
kaken-mcp = "kaken_mcp:main"

[project.urls]
Homepage = "https://github.com/leaveanest/kaken-mcp"
Repository = "https://github.com/leaveanest/kaken-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
